added basic components

--- a/pordbfront/src/index.css
+++ b/pordbfront/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header {
+  background-color: blue;
+}
+
+.wrapper {
+  background-color: red;
+}
