--- a/pordbfront/src/Components/Navbar.css
+++ b/pordbfront/src/Components/Navbar.css
@@ -1,50 +1,51 @@
-
 span {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
-
 
 /* CLASSES */
 
 .header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #e2e7f6;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #e2e7f6;
 }
 
 .wide {
-  width: 100%;
+    width: 100%;
 }
 
 .NavLink {
-  color: gray;
-  text-decoration: none;
+    color: gray;
+    text-decoration: none;
 }
 
 .NavItem {
-  padding: 0 5px 0 5px;
-  display: inline;
+    padding: 0 5px 0 5px;
+    display: inline;
 }
 
 /* IDS */
 
 #NavbarBrand {
-  margin-left: 4vw;
+    margin-left: 4vw;
 }
 
 #rightItms {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20px 0 20px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0 20px 0;
 }
 
+.logo {
+    width: 5rem;
+}
