--- a/pordbfront/src/index.css
+++ b/pordbfront/src/index.css
@@ -1,9 +1,9 @@
 body {
-  margin: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #e2e7f6;
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #e2e7f6;
 }
 
 /*
